fixed overlapping content and real sections

--- a/style/app.scss
+++ b/style/app.scss
@@ -35,7 +35,7 @@ section {
   top: 0rem;
   right: 0rem;
   height: 100%;
-  width: 55%;
+  width: 52%;
   overflow-y: scroll;
   padding: {
     top: 2rem;
